2011-09-16    <simleo@neuron.crs4.it>

	* test/seq/align/test_mapping.py: added a class for storing SAM
	records.

2011-09-04    <zag@manzanillo>

	* bl/core/gt/messages/SampleSnpCall.py: Added a message to encode
	SnpCall on a sample.

2011-09-03    <zag@manzanillo>

	* bl/core/io/message_stream.py (MessageStreamWriter): Added a
	class to write sequences of messages to a stream (a file for the
	time being).
	(MessageStreamReader): Added a class to read sequences of messages
	from a stream (a file for the time being).

	* bl/core/messages/MessageStreamHeader.py: Added a
	MessageStreamHeader object.

	* bl/core/messages/registry.py (MessageCodecInfo): added a naive
	facility for Message Codecs management.

	* Makefile (PROTOBUF_SRC_DIRS): Added support for protobuf proto files
	compiling.

	* bl/core/io/blob_stream.py (BlobStream): Added a class to manage
	the writing of a sequence of strings blobs to a file.

2011-09-02    <zag@manzanillo>

	* bl/core/io/abi.py: Moved from readers to io. Deleted 'readers'

2011-08-30    <zag@manzanillo>

	* bl/core/readers/abi.py (SDSReader): Added a class to read Abi
	SDS 2.3 (txt) files.

2011-08-03    <simleo@neuron.crs4.it>

	* bl/core/seq/utils/baseops.py (reverse_complement): changed to
	return a tuple when the input sequence is a tuple.

	* bl/core/utils/random_ext.py (random_string): fixed hardwiring of
	'len'; added a 'pool' param to provide a custom pool;
	reimplemented with sample_wr (now it's twice as fast).

2011-07-29    <simleo@neuron.crs4.it>

	* bl/core/utils/longest_subs.py: added.

	* bl/core/seq/io/dbsnp.py: added.

2011-07-25    <simleo@neuron.crs4.it>

	* bl/core/utils/pspawner.py (ProcessSpawner.run): added an
	external handler for ChildTerminationError: for reasons we
	currently don't understand, it sometimes manages to escape the
	internal one.

2011-07-06    <simleo@neuron.crs4.it>

	* bl/core/utils/guardian.py (main): changed to exit not only when
	the master is dead, but also when the slave is.