@@ -221,11 +221,11 @@ class TestSAMMapping(unittest.TestCase):
     self.assertEqual(self.mapping.get_name(), "FOO/1")
     self.assertEqual(self.mapping.flag, 81)
     self.assertEqual(self.mapping.tid, "chr6")
-    self.assertEqual(self.mapping.pos, 3558356)
+    self.assertEqual(self.mapping.pos, 3558357)
     self.assertEqual(self.mapping.qual, 37)
     self.assertEqual(self.mapping.get_cigar(), [(5, 'M'), (1, 'I'), (85, 'M')])
     self.assertTrue(self.mapping.mtid is None)
-    self.assertEqual(self.mapping.mpos, -1)
+    self.assertEqual(self.mapping.mpos, 0)
     self.assertEqual(self.mapping.isize, 0)
     self.assertEqual(self.mapping.get_seq_5(), self.SEQ)
     self.assertEqual(self.mapping.get_ascii_base_qual(), self.QUAL)
