@@ -1,3 +1,8 @@
+2011-09-19    <simleo@neuron.crs4.it>
+
+	* bl/core/seq/align/mapping.py (SAMMapping): changed to return
+	1-based positions.
+
 2011-09-16    <simleo@neuron.crs4.it>
 
 	* test/seq/align/test_mapping.py: added a class for storing SAM
